WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237541
[ iOS Debug ] ASSERTION FAILED: Attempt to access post layout data before receiving it on editing/editable-region/fixed-and-absolute-contenteditable-scrolled.html
https://bugs.webkit.org/show_bug.cgi?id=237541
Summary
[ iOS Debug ] ASSERTION FAILED: Attempt to access post layout data before rec...
Dawn Morningstar
Reported
2022-03-07 11:10:55 PST
editing/editable-region/fixed-and-absolute-contenteditable-scrolled.html Is a flaky Assertion Failure on iOS Debug queues. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=editing%2Feditable-region%2Ffixed-and-absolute-contenteditable-scrolled.html
CRASH-LOG: No crash log found for WebKitTestRunnerApp:55783. stderr: ASSERTION FAILED: Attempt to access post layout data before receiving it !isMissingPostLayoutData /Volumes/Data/worker/ios-simulator-15-debug/build/Source/WebKit/Shared/EditorState.h(170) : const WebKit::EditorState::PostLayoutData &WebKit::EditorState::postLayoutData() const 1 0x11a0d8749 WTFCrash 2 0x138a01b9f WebKit::EditorState::postLayoutData() const 3 0x13a52c18e -[WKContentView(WKInteraction) _characterInRelationToCaretSelection:] 4 0x1306a28b6 -[UIKeyboardImpl nextCharacterIsWordCharacter] 5 0x1306a0dd6 -[UIKeyboardImpl didAcceptAutocorrection:wordTerminator:] 6 0x1306a09ba __99-[UIKeyboardImpl acceptAutocorrectionForWordTerminator:executionContextPassingTIKeyboardCandidate:]_block_invoke 7 0x1306ca085 -[UIKeyboardTaskExecutionContext returnExecutionToParentWithInfo:] 8 0x1306a1971 -[UIKeyboardImpl acceptAutocorrection:executionContextPassingTIKeyboardCandidate:] 9 0x1306a08f1 -[UIKeyboardImpl acceptAutocorrectionForWordTerminator:executionContextPassingTIKeyboardCandidate:] 10 0x1306a0789 __56-[UIKeyboardImpl acceptAutocorrectionForWordTerminator:]_block_invoke 11 0x1306cb8bb -[UIKeyboardTaskEntry execute:] 12 0x1306ca55d -[UIKeyboardTaskQueue continueExecutionOnMainThread] 13 0x1306ca841 -[UIKeyboardTaskQueue performTaskOnMainThread:waitUntilDone:] 14 0x1306a06d0 -[UIKeyboardImpl acceptAutocorrectionForWordTerminator:] 15 0x1306a3a1e -[UIKeyboardImpl acceptAutocorrection] 16 0x1306a3c5d __38-[UIKeyboardImpl acceptAutocorrection]_block_invoke 17 0x1306cb8bb -[UIKeyboardTaskEntry execute:] 18 0x1306ca55d -[UIKeyboardTaskQueue continueExecutionOnMainThread] 19 0x1306a3c0e -[UIKeyboardImpl acceptAutocorrection] 20 0x1306870d7 -[UIKeyboardImpl setDelegate:force:] 21 0x13028dcce -[UIKeyboardSceneDelegate _reloadInputViewsForKeyWindowSceneResponder:] 22 0x13028d44d -[UIKeyboardSceneDelegate _reloadInputViewsForResponder:] 23 0x130916d0d -[UIResponder(UIResponderInputViewAdditions) reloadInputViews] 24 0x13a534783 -[WKContentView(WKInteraction) _hideKeyboard] 25 0x13a5364d8 -[WKContentView(WKInteraction) _elementDidBlur] 26 0x139054919 WebKit::PageClientImpl::elementDidBlur() 27 0x1390ca3c5 WebKit::WebPageProxy::elementDidBlur() 28 0x13a1c7b2b void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(), std::__1::tuple<> >(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(), std::__1::tuple<>&&, std::__1::integer_sequence<unsigned long>) 29 0x13a1c7a1d void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(), std::__1::tuple<>, std::__1::integer_sequence<unsigned long> >(std::__1::tuple<>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)()) 30 0x13a1972d0 void IPC::handleMessage<Messages::WebPageProxy::ElementDidBlur, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)()>(IPC::Connection&, IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)()) 31 0x13a18b56b WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) CRASH-URL:
https://build.webkit.org/results/Apple-iPadOS-15-Simulator-Debug-WK2-Tests/r290882%20(1162)/editing/editable-region/fixed-and-absolute-contenteditable-scrolled-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Dawn Morningstar
Comment 1
2022-03-07 11:12:25 PST
Regression point appears to be around
r289876
further investigation is required.
Radar WebKit Bug Importer
Comment 2
2022-03-07 11:12:47 PST
<
rdar://problem/89918871
>
Wenson Hsieh
Comment 3
2022-06-09 12:10:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1425
EWS
Comment 4
2022-06-09 17:15:14 PDT
Committed
r295441
(
251447@main
): <
https://commits.webkit.org/251447@main
> Reviewed commits have been landed. Closing PR #1425 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug